--- a/frontend/src/components/Settings/Setting.css
+++ b/frontend/src/components/Settings/Setting.css
@@ -43,8 +43,8 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
 }
 
 .Setting-on .Setting-switch {
-  background: #e6007a;
-  border-color: #e6007a;
+  background: #562b8e;
+  border-color: #562b8e;
 }
 
 .Setting-knob {
