--- a/frontend/src/components/AllChains.css
+++ b/frontend/src/components/AllChains.css
@@ -68,8 +68,8 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
 }
 
 .AllChains-controls-sortby-active {
-  background-color: #e6007a;
-  border-color: #e6007a;
+  background-color: #562b8e;
+  border-color: #562b8e;
   color: white;
 }
 
@@ -114,11 +114,11 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
 }
 
 .AllChains-chain-selected {
-  background: #e6007a;
+  background: #562b8e;
   color: white;
 }
 
 .AllChains-chain-selected .AllChains-node-count {
   background: white;
-  color: #e6007a;
+  color: #562b8e;
 }
