--- a/frontend/src/components/List/THead.css
+++ b/frontend/src/components/List/THead.css
@@ -32,7 +32,7 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
 
 .THeadCell-sorted {
   cursor: pointer;
-  background: #e6007a;
+  background: #562b8e;
   color: #fff;
 }
 
