--- a/frontend/src/components/Map/Location.css
+++ b/frontend/src/components/Map/Location.css
@@ -54,7 +54,7 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
 
 .Location-synced {
   z-index: 3;
-  border-color: #e6007a;
+  border-color: #562b8e;
 }
 
 .Location-synced .Location-ping {
