Clean up Header Tile styles

--- a/frontend/src/components/Tile.css
+++ b/frontend/src/components/Tile.css
@@ -19,25 +19,20 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
 .Tile {
   font-size: 2.5em;
   text-align: left;
-  width: 260px;
   height: 100px;
   display: inline-block;
   position: relative;
+  padding: 24px 0 0 70px;
+  margin-right: 36px;
 }
 
 .Tile-label {
-  position: absolute;
-  top: 24px;
-  left: 70px;
   right: 0;
   font-size: 0.4em;
   text-transform: uppercase;
 }
 
 .Tile-content {
-  position: absolute;
-  bottom: 16px;
-  left: 70px;
   right: 0;
   font-weight: 300;
   font-size: 0.75em;
